tests/snapshots/example.config/configs@services__bbmri-blaze-directory-sync.yml.snap
---
source: src/config.rs
expression: file
info: services/bbmri-blaze-directory-sync.yml
input_file: tests/configs/example.config.toml
---
services:
  directory_sync_service:
    image: "docker.verbis.dkfz.de/cache/samply/directory_sync_service"
    environment:
      DS_DIRECTORY_URL: https://directory.bbmri-eric.eu/
      DS_DIRECTORY_USER_NAME: test
      DS_DIRECTORY_USER_PASS: test
      DS_TIMER_CRON: 0 22 * * *
      DS_DIRECTORY_ALLOW_STAR_MODEL: true
      DS_DIRECTORY_MOCK: 
      DS_DIRECTORY_DEFAULT_COLLECTION_ID: 
      DS_DIRECTORY_COUNTRY: 
      DS_FHIR_STORE_URL: http://bbmri-blaze:8080/fhir/
    depends_on:
      - bbmri-blaze
