tests/snapshots/example.config/configs@services__ccp-beam-proxy.yml.snap
---
source: src/config.rs
expression: file
info:
  - /mnt/cache/git/rusthead/tests/configs/example.config.toml
  - ccp-beam-proxy.yml
input_file: tests/configs/example.config.toml
---
services:
  ccp-beam-proxy:
    image: docker.verbis.dkfz.de/cache/samply/beam-proxy:develop
    environment:
      BROKER_URL: https://broker.ccp-it.dktk.dkfz.de/
      PROXY_ID: dummy.broker.ccp-it.dktk.dkfz.de
      APP_focus_KEY: "${CCP_BEAM_PROXY_FOCUS_KEY}"
      ROOTCERT_FILE: /conf/root.crt.pem
      PRIVKEY_FILE: /run/secrets/proxy.pem
      TLS_CA_CERTIFICATES_DIR: /conf/trusted-ca-certs
      ALL_PROXY: http://forward-proxy:3128/
    volumes:
      - [TMP_DIR]/trusted-ca-certs:/conf/trusted-ca-certs:ro
    secrets:
      - proxy.pem
    configs:
      - source: ccp.root.crt.pem
        target: /conf/root.crt.pem

configs:
  ccp.root.crt.pem:
    content: |
      -----BEGIN CERTIFICATE-----
      MIIDNTCCAh2gAwIBAgIUN7yzueIZzwpe8PaPEIMY8zoH+eMwDQYJKoZIhvcNAQEL
      BQAwFjEUMBIGA1UEAxMLQnJva2VyLVJvb3QwHhcNMjMwNTIzMTAxNzIzWhcNMzMw
      NTIwMTAxNzUzWjAWMRQwEgYDVQQDEwtCcm9rZXItUm9vdDCCASIwDQYJKoZIhvcN
      AQEBBQADggEPADCCAQoCggEBAN5JAj+HydSGaxvA0AOcrXVTZ9FfsH0cMVBlQb72
      bGZgrRvkqtB011TNXZfsHl7rPxCY61DcsDJfFq3+8VHT+S9HE0qV1bEwP+oA3xc4
      Opq77av77cNNOqDC7h+jyPhHcUaE33iddmrH9Zn2ofWTSkKHHu3PAe5udCrc2QnD
      4PLRF6gqiEY1mcGknJrXj1ff/X0nRY/m6cnHNXz0Cvh8oPOtbdfGgfZjID2/fJNP
      fNoNKqN+5oJAZ+ZZ9id9rBvKj1ivW3F2EoGjZF268SgZzc5QrM/D1OpSBQf5SF/V
      qUPcQTgt9ry3YR+SZYazLkfKMEOWEa0WsqJVgXdQ6FyergcCAwEAAaN7MHkwDgYD
      VR0PAQH/BAQDAgEGMA8GA1UdEwEB/wQFMAMBAf8wHQYDVR0OBBYEFEa70kcseqU5
      bHx2zSt4bG21HokhMB8GA1UdIwQYMBaAFEa70kcseqU5bHx2zSt4bG21HokhMBYG
      A1UdEQQPMA2CC0Jyb2tlci1Sb290MA0GCSqGSIb3DQEBCwUAA4IBAQCGmE7NXW4T
      6J4mV3b132cGEMD7grx5JeiXK5EHMlswUS+Odz0NcBNzhUHdG4WVMbrilHbI5Ua+
      6jdKx5WwnqzjQvElP0MCw6sH/35gbokWgk1provOP99WOFRsQs+9Sm8M2XtMf9HZ
      m3wABwU/O+dhZZ1OT1PjSZD0OKWKqH/KvlsoF5R6P888KpeYFiIWiUNS5z21Jm8A
      ZcllJjiRJ60EmDwSUOQVJJSMOvtr6xTZDZLtAKSN8zN08lsNGzyrFwqjDwU0WTqp
      scMXEGBsWQjlvxqDnXyljepR0oqRIjOvgrWaIgbxcnu98tK/OdBGwlAPKNUW7Crr
      vO+eHxl9iqd4
      -----END CERTIFICATE-----

secrets:
  proxy.pem:
    file: [TMP_DIR]/pki/dummy.priv.pem
