tests/snapshots/example.config/configs@services__ccp-exporter-db.yml.snap
---
source: src/config.rs
expression: file
info: services/ccp-exporter-db.yml
input_file: tests/configs/example.config.toml
---

services:
  ccp-exporter-db:
    image: docker.verbis.dkfz.de/cache/postgres:15.6-alpine
    environment:
      POSTGRES_USER: ccp-exporter
      POSTGRES_DB: ccp-exporter
      POSTGRES_PASSWORD: ${CCP_EXPORTER_DB_PASSWORD}
    volumes:
      - "ccp-exporter-db:/var/lib/postgresql/data"

volumes:
  ccp-exporter-db:
