tests/snapshots/example.config/configs@services__eric-focus.yml.snap
---
source: src/config.rs
expression: file
info: services/eric-focus.yml
input_file: tests/configs/example.config.toml
---
services:
  eric-focus:
    image: docker.verbis.dkfz.de/cache/samply/focus:main-bbmri
    environment:
      BEAM_APP_ID_LONG: focus.dummy.broker.bbmri.samply.de
      BEAM_PROXY_URL: http://eric-beam-proxy:8081/
      ENDPOINT_URL: http://bbmri-blaze:8080/fhir/
      API_KEY: "${ERIC_BEAM_PROXY_FOCUS_KEY}"
      RETRY_COUNT: 128
      EPSILON: 0.28
      ENDPOINT_TYPE: blaze
