tests/snapshots/example.config/configs@services__traefik.yml.snap
---
source: src/config.rs
expression: file
info: services/traefik.yml
input_file: tests/configs/example.config.toml
---
services:
  traefik:
    image: docker.verbis.dkfz.de/cache/traefik:latest
    command:
      - --entrypoints.web.address=:80
      - --entrypoints.websecure.address=:443
      - --providers.docker=true
      - --providers.docker.exposedbydefault=false
      - --providers.file.directory=/configuration/
      - --api.dashboard=false
      - --accesslog=true
      - --entrypoints.web.http.redirections.entrypoint.to=websecure
      - --entrypoints.web.http.redirections.entrypoint.scheme=https
    labels:
      - "traefik.enable=true"
      - "traefik.http.middlewares.bbmri-blaze.basicauth.users=bbmri-blaze:<hash>"
      - "traefik.http.middlewares.ccp-blaze.basicauth.users=ccp-blaze:<hash>"
      - "traefik.http.middlewares.ccp-obds2fhir-auth.basicauth.users=ccp-obds2fhir-auth:<hash>"
      - "traefik.http.middlewares.dnpm-etl.basicauth.users=dnpm-etl:<hash>"
    ports:
      - 80:80
      - 443:443
    configs:
      - source: certificates.yaml
        target: /configuration/certificates.yaml
    volumes:
      - [TMP_DIR]/traefik-tls/fullchain.pem:/certs/fullchain.pem:ro
      - [TMP_DIR]/traefik-tls/privkey.pem:/certs/privkey.pem:ro
      - /var/run/docker.sock:/var/run/docker.sock:ro

configs:
  certificates.yaml:
    content: |
      tls:
        stores:
          default:
            defaultCertificate:
              certFile: /certs/fullchain.pem
              keyFile: /certs/privkey.pem
